.provarCaches/00D5f000005vwGkEAI/objects/rstk__socontent__c.object
<CustomObject>
    <description>socontent__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socontent_socontract__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__socontent_soprod__r.rstk__externalid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socontent_socontract__r.rstk__socontract_contractid__c &amp; &quot;-&quot; &amp; rstk__socontent_soprod__r.rstk__soprod_prod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontent_active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this Entitlement is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontent_entprod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Product that the customer is entitled to because of this Entitlement.</inlineHelpText>
        <label>Product Entitled To</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlements (Product Entitled To)</relationshipLabel>
        <relationshipName>socontent_entprods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontent_socontract__c</fullName>
        <inlineHelpText>The identifier of the Contract that this Entitlement is attached to.</inlineHelpText>
        <label>Contract ID</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Entitlements</relationshipLabel>
        <relationshipName>socontents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socontent_soprod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Entitlement Product which entitles the customer to the &apos;Product Entitled To&apos;.</inlineHelpText>
        <label>Entitlement</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Entitlements</relationshipLabel>
        <relationshipName>socontents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontent_usesowarr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that Entitlement applies to the warranted Product.</inlineHelpText>
        <label>Applies to Specific Covered Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Entitlements</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Entitlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Entitlement_Product_cannot_be_changed</fullName>
        <active>true</active>
        <description>Entitlement Product cannot be changed</description>
        <errorConditionFormula>ISCHANGED(rstk__socontent_soprod__c)</errorConditionFormula>
        <errorDisplayField>rstk__socontent_entprod__c</errorDisplayField>
        <errorMessage>Entitlement Product cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Entitlement_is_required</fullName>
        <active>true</active>
        <description>Entitlement is required</description>
        <errorConditionFormula>ISBLANK(rstk__socontent_soprod__c)</errorConditionFormula>
        <errorMessage>Entitlement is required</errorMessage>
    </validationRules>
</CustomObject>